fix: overflow hidden for x axis and auto for y axis(#master)

--- a/pages/post/post.less
+++ b/pages/post/post.less
@@ -149,13 +149,13 @@
 
 .preview {
   position: sticky;
-  //   overflow: auto;
   margin-left: 30px;
   z-index: 1;
   top: 10px;
   height: calc(100vh - 20px);
 
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 
   transform: scale(1);
 }
@@ -197,10 +197,9 @@
 
     box-shadow: 2.5px 2.5px 5px rgba(0, 0, 0, 0.5);
   }
-  
-  .anchors_content{
+
+  .anchors_content {
     max-height: calc(100vh - 150px);
     overflow: auto;
   }
-
 }
